# sports-product-analytics-bigquery-looker

./: .gitignore  LICENSE  README.md  open-demo.bat  pyproject.toml
.github/workflows/: ci.yml
dashboard/: LOOKER_STUDIO_BUILD_GUIDE.md  calculated-fields.md  portfolio-dashboard.html
dashboard/data/: ab_test.csv  dashboard-data.js  executive_daily.csv  funnel.csv  insights.json  key_moments.csv  marketing.csv  quality.csv  retention.csv  sports_engagement.csv
dashboard/google-sheets/: campaign_targets.csv
docs/: architecture.md  case-study.md  data-dictionary.md  interview-walkthrough.md
sql/: 00_create_dataset.sql  01_sessionization.sql  02_product_kpis.sql  03_retention_cohort.sql  04_conversion_funnel.sql  05_sports_engagement.sql  06_football_metrics.sql  07_marketing_economics.sql  08_ab_test.sql  09_data_quality.sql
src/sports_product_analytics/: __init__.py  __main__.py  bigquery.py  cli.py  contracts.py  pipeline.py  quality.py  reporting.py  statsbomb.py  synthetic.py
tests/: conftest.py  test_pipeline.py  test_quality.py  test_reporting.py  test_statsbomb.py  test_synthetic.py
